// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with blank ingredientList 1`] = `
<DocumentFragment>
  <div
    class="IngredientList"
  />
</DocumentFragment>
`;

exports[`matches snapshot with filled ingredientList 1`] = `
<DocumentFragment>
  <div
    class="IngredientList"
  >
    <div
      class="IngredientList-div"
    >
      cheese 
      <button
        class="delete-btn"
      >
        X
      </button>
    </div>
    <div
      class="IngredientList-div"
    >
      eggs 
      <button
        class="delete-btn"
      >
        X
      </button>
    </div>
  </div>
</DocumentFragment>
`;
